[gd_scene load_steps=4 format=2]

[ext_resource path="res://Art/Player/body.png" type="Texture" id=1]
[ext_resource path="res://Characters/Player/player_airborne.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 15.1249
height = 1.03645

[node name="player_airborne" type="RigidBody2D"]
collision_layer = 2
mode = 2
mass = 2.0
gravity_scale = 2.0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
disabled = true

[node name="DownCheck" type="RayCast2D" parent="."]
cast_to = Vector2( 0, 25 )

[node name="UpCheck" type="RayCast2D" parent="."]
cast_to = Vector2( 0, -25 )

[node name="RightCheck" type="RayCast2D" parent="."]
cast_to = Vector2( 25, 0 )

[node name="LeftCheck" type="RayCast2D" parent="."]
position = Vector2( 0, -3 )
cast_to = Vector2( -25, 0 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
